--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -250,7 +250,8 @@
             {
                 "manufacturer": "PSP",
                 "names": [
-                    { "name": "oldTimer", "aliases": [ "PSPaudioware PSP oldTimer" ] }
+                    { "name": "oldTimer", "aliases": [ "PSPaudioware PSP oldTimer" ] },
+                    { "name": "E27", "aliases": [ "PSP E27" ] }
                 ]
             },
             {
@@ -280,14 +281,14 @@
                     { "name": "Weiss Deess", "aliases": [ "Weiss Deess" ] },
                     { "name": "Weiss EQ MP", "aliases": [ "Weiss EQ MP" ] },
                     { "name": "Weiss EQ1", "aliases": [ "Weiss EQ1" ] },
-                    { "name": "Weiss MM-1 Mastering Maximizer", "aliases": [ "Weiss MM-1 Mastering Maximizer" ] },
-                    { "name": "Satson Channel", "aliases": [ "SatsonChannel", "Satson Channel" ] }
+                    { "name": "Weiss MM-1 Mastering Maximizer", "aliases": [ "Weiss MM-1 Mastering Maximizer" ] }                    
                 ]
             },
             {
                 "manufacturer": "Sonimus",
                 "names": [
-                    { "name": "Satson Buss", "aliases": [ "SatsonBuss", "Satson Buss" ] }
+                    { "name": "Satson Buss", "aliases": [ "SatsonBuss", "Satson Buss" ] },
+                    { "name": "Satson Channel", "aliases": [ "SatsonChannel", "Satson Channel" ] }
                 ]
             },
             {
@@ -299,7 +300,8 @@
             {
                 "manufacturer": "Sound Particles",
                 "names": [
-                    { "name": "BrightnessPanner", "aliases": [ "BrightnessPanner" ] }
+                    { "name": "Brightness Panner", "aliases": [ "BrightnessPanner" ] },
+                    { "name": "Energy Panner", "aliases": [ "EnergyPanner" ] }
                 ]
             },
             {
