Added FirComp2 alias.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -122,7 +122,8 @@
             {
                 "manufacturer": "JonVProd",
                 "names": [
-                    { "name": "FirComp", "aliases": [ "FirComp" ] }
+                    { "name": "FirComp", "aliases": [ "FirComp" ] },
+                    { "name": "FirComp2", "aliases": [ "FirComp2" ] }
                 ]
             },
             {
