Made manufacturer name show up as 'n/a' when one is not provided. Updated aliases. Updated dependencies.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -28,7 +28,9 @@
             {
                 "manufacturer": "Arturia",
                 "names": [
+                    { "name": "ARP 2600 V3", "aliases": [ "ARP 2600 V3" ] },
                     { "name": "Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
+                    { "name": "Dist Tube-Culture", "aliases": [ "Dist TUBE-CULTURE" ] },
                     { "name": "Efx Fragments", "aliases": [ "Efx FRAGMENTS" ] },
                     { "name": "Pigments", "aliases": [ "Pigments" ] }
                 ]
@@ -37,6 +39,18 @@
                 "manufacturer": "Audio Thing",
                 "names": [
                     { "name": "Things Texture", "aliases": [ "Things Texture" ] }
+                ]
+            },
+            {
+                "manufacturer": "d16",
+                "names": [
+                    { "name": "Decimort 2", "aliases": [ "Decimort 2" ] }
+                ]
+            },
+            {
+                "manufacturer": "DMG Audio",
+                "names": [
+                    { "name": "Track Control", "aliases": [ "TrackControl" ] }
                 ]
             },
             {
@@ -51,7 +65,7 @@
                 "names": [
                     { "name": "Pro-C 2", "aliases": [ "Pro-C 2", "FabFilter FF Pro-C 2" ] },
                     { "name": "Pro-DS", "aliases": [ "Pro-DS", "FabFilter FF Pro-DS" ] },
-                    { "name": "Pro-G", "aliases": [ "FabFilter FF Pro-G" ] },
+                    { "name": "Pro-G", "aliases": [ "Pro-G", "FabFilter FF Pro-G" ] },
                     { "name": "Pro-L", "aliases": [ "FabFilter FF Pro-L" ] },
                     { "name": "Pro-L 2", "aliases": [ "Pro-L 2", "FabFilter FF Pro-L 2" ] },
                     { "name": "Pro-MB", "aliases": [ "Pro-MB", "FabFilter FF Pro-MB" ] },
@@ -61,7 +75,8 @@
                     { "name": "Saturn", "aliases": [ "FabFilter FF Saturn" ] },
                     { "name": "Saturn 2", "aliases": [ "Saturn 2" ] },
                     { "name": "Timeless 2", "aliases": [ "Timeless 2", "FabFilter FF Timeless 2" ] },
-                    { "name": "Timeless 3", "aliases": [ "Timeless 3" ] }
+                    { "name": "Timeless 3", "aliases": [ "Timeless 3" ] },
+                    { "name": "Volcano 3", "aliases": [ "Volcano 3", "FabFilter Volcano 3" ] }
                 ]
             },
             {
@@ -69,14 +84,16 @@
                 "names": [
                     { "name": "IRCAM Trax v3", "aliases": [ "FLUX SE - IRCAM TraxV3", "Flux TraxV3-x64" ] },
                     { "name": "IRCAM Verb v3", "aliases": [ "Flux VerbV3-x64" ] },
-                    { "name": "Stereo Tool v3", "aliases": [ "StereoToolV3", "FLUX SE StereoToolV3", "StereoToolV3-x64", "Flux StereoToolV3-x64" ] }
+                    { "name": "Stereo Tool", "aliases": [ "StereoTool", "StereoToolV3", "FLUX SE StereoToolV3", "StereoToolV3-x64", "Flux StereoToolV3-x64" ] }
                 ]
             },
             {
                 "manufacturer": "Fuse Audio Labs",
                 "names": [
+                    { "name": "RS-W2395C", "aliases": [ "RS-W2395C" ] },
                     { "name": "VCL-4", "aliases": [ "VCL-4" ] },
-                    { "name": "VQP-258A", "aliases": [ "VQP-258A" ] }
+                    { "name": "VQP-258A", "aliases": [ "VQP-258A" ] },
+                    { "name": "VQP-259A", "aliases": [ "VQP-259A" ] }
                 ]
             },
             {
@@ -85,7 +102,9 @@
                     { "name": "GRM Comb Stereo", "aliases": [ "GRM Comb Stereo" ] },
                     { "name": "GRM Evolution", "aliases": [ "GRM Evolution" ] },
                     { "name": "GRM Freq Shift Stereo", "aliases": [ "GRM FreqShift Stereo" ] },
-                    { "name": "GRM Space Grain", "aliases": [ "GRM SpaceGrain" ] }
+                    { "name": "GRM Reson", "aliases": [ "GRM Reson" ] },
+                    { "name": "GRM Space Grain", "aliases": [ "GRM SpaceGrain" ] },
+                    { "name": "GRM Warp", "aliases": [ "GRM Warp" ] }
                 ]
             },
             {
@@ -113,6 +132,8 @@
                     { "name": "Ozone 8 Imager", "aliases": [ "Ozone 8 Imager" ] },
                     { "name": "Ozone 9 Dynamic EQ", "aliases": [ "Ozone 9 Dynamic EQ" ] },
                     { "name": "Ozone 9 Imager", "aliases": [ "Ozone 9 Imager" ] },
+                    { "name": "Ozone 10", "aliases": [ "Ozone 10" ] },
+                    { "name": "Ozone 10 Equalizer", "aliases": [ "Ozone 10 Equalizer" ] },
                     { "name": "Ozone Imager", "aliases": [ "Ozone Imager" ] },
                     { "name": "Ozone Imager 2", "aliases": [ "Ozone Imager 2" ] },
                     { "name": "Tonal Balance Control", "aliases": [ "Tonal Balance Control" ] },
@@ -136,12 +157,19 @@
             {
                 "manufacturer": "Kush Audio",
                 "names": [
+                    { "name": "Blyss", "aliases": [ "Blyss" ] },
                     { "name": "Clariphonic DSP mk II", "aliases": [ "Clariphonic DSP MKII", "ClariphonicDSPmkii" ] },
                     { "name": "Hammer DSP", "aliases": [ "Hammer DSP" ] },
                     { "name": "Novatron", "aliases": [ "Novatron" ] },
                     { "name": "Omega 458A", "aliases": [ "Omega 458A" ] },
                     { "name": "Omega A", "aliases": [ "Omega A" ] },
                     { "name": "REDDI", "aliases": [ "REDDI" ] }
+                ]
+            },
+            {
+                "manufacturer": "Leapwing Audio",
+                "names": [
+                    { "name": "Root One", "aliases": [ "RootOne" ] }
                 ]
             },
             {
@@ -158,14 +186,29 @@
                     { "name": "Cinematic Rooms Professional", "aliases": [ "Cinematic Rooms Professional" ] },
                     { "name": "Illusion", "aliases": [ "Illusion" ] },
                     { "name": "Lustrous Plates", "aliases": [ "Lustrous Plates" ] },
+                    { "name": "Reverberate", "aliases": [ "Reverberate" ] },
                     { "name": "Seventh Heaven", "aliases": [ "Seventh Heaven" ] },
-                    { "name": "Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] }
+                    { "name": "Seventh Heaven Professional", "aliases": [ "Seventh Heaven Professional" ] },
+                    { "name": "Tai Chi", "aliases": [ "Tai Chi" ] }
                 ]
             },
             {
                 "manufacturer": "Madrona Labs",
                 "names": [
                     { "name": "Aalto", "aliases": [ "Aalto" ] }
+                ]
+            },
+            {
+                "manufacturer": "Mathew Lane",
+                "names": [
+                    { "name": "DrMS", "aliases": [ "DrMS" ] }
+                ]
+            },
+            {
+                "manufacturer": "Melda",
+                "names": [
+                    { "name": "MFreqShifter", "aliases": [ "MFreqShifter" ] },
+                    { "name": "MSpectralPan", "aliases": [ "MSpectralPan" ] }
                 ]
             },
             {
@@ -181,6 +224,7 @@
                     { "name": "Enhanced EQ", "aliases": [ "Enhanced EQ" ] },
                     { "name": "FM8", "aliases": [ "FM8" ] },
                     { "name": "Kontakt 5", "aliases": [ "Kontakt 5" ] },
+                    { "name": "Kontakt 7", "aliases": [ "Kontakt 7" ] },
                     { "name": "Passive EQ", "aliases": [ "Passive EQ" ] },
                     { "name": "RC 48", "aliases": [ "RC 48" ] },
                     { "name": "Reaktor 5 FX", "aliases": [ "Reaktor5 FX" ] },
@@ -192,7 +236,8 @@
                 "manufacturer": "Newfangled Audio",
                 "names": [
                     { "name": "Elevate", "aliases": [ "Newfangled Audio Newfangled Elevate" ] },
-                    { "name": "EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate", "Newfangled EQuivocate" ] }
+                    { "name": "EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate", "Newfangled EQuivocate" ] },
+                    { "name": "Invigorate", "aliases": [ "Invigorate" ] }
                 ]
             },
             {
@@ -211,12 +256,19 @@
                 ]
             },
             {
+                "manufacturer": "Overloud",
+                "names": [
+                    { "name": "Gem EQ550", "aliases": [ "Gem EQ550" ] }
+                ]
+            },
+            {
                 "manufacturer": "Plugin Alliance",
                 "names": [
+                    { "name": "ADPTR Sculpt", "aliases": [ "ADPTR Sculpt" ] },
                     { "name": "Black Box Analog Design HG-2", "aliases": [ "Black Box Analog Design HG-2" ] },
-                    { "name": " Black Box Analog Design HG-2MS", "aliases": [ "Black Box Analog Design HG-2MS" ] },
-                    { "name": " bx_console N", "aliases": [ "bx_console N" ] },
-                    { "name": " bx_console SSL 9000 J", "aliases": [ "bx_console SSL 9000 J" ] },
+                    { "name": "Black Box Analog Design HG-2MS", "aliases": [ "Black Box Analog Design HG-2MS" ] },
+                    { "name": "bx_console N", "aliases": [ "bx_console N" ] },
+                    { "name": "bx_console SSL 9000 J", "aliases": [ "bx_console SSL 9000 J" ] },
                     { "name": "bx_subsynth", "aliases": [ "bx_subsynth" ] },
                     { "name": "dearVR Micro", "aliases": [ "dearVR MICRO" ] },
                     { "name": "dearVR Music", "aliases": [ "dearVR music", "Plugin Alliance dearVR music" ] },
@@ -232,6 +284,7 @@
                     { "name": "SPL Passeq", "aliases": [ "SPL Passeq" ] },
                     { "name": "Unfiltered Audio Bass Mint", "aliases": [ "Unfiltered Audio Bass Mint" ] },
                     { "name": "Unfiltered Audio Byome", "aliases": [ "Unfiltered Audio Byome" ] },
+                    { "name": "Unfiltered Audio lo-fi-af", "aliases": [ "Unfiltered Audio lo-fi-af" ] },
                     { "name": "Unfiltered Audio Silo", "aliases": [ "Unfiltered Audio Silo" ] },
                     { "name": "Unfiltered Audio Spec Ops", "aliases": [ "Unfiltered Audio SpecOps" ] }
                 ]
@@ -258,7 +311,8 @@
             {
                 "manufacturer": "Pulsar",
                 "names": [
-                    { "name": "Mu", "aliases": [ "Mu" ] }
+                    { "name": "Mu", "aliases": [ "Mu" ] },
+                    { "name": "Massive", "aliases": [ "Massive", "Pulsar Massive" ] }
                 ]
             },
             {
@@ -266,8 +320,10 @@
                 "names": [
                     { "name": "British Class A", "aliases": [ "British Class A" ] },
                     { "name": "Drawmer 1973", "aliases": [ "Drawmer 1973" ] },
+                    { "name": "FET Compressor Mk II", "aliases": [ "FET Compressor Mk II" ] },
                     { "name": "Harmonics Analog Saturation Processor", "aliases": [ "Harmonics Analog Saturation Processor" ] },
                     { "name": "Modular FX", "aliases": [ "Modular FX" ] },
+                    { "name": "Opto Compressor", "aliases": [ "OPTO Compressor" ] },
                     { "name": "Overstayer M-A-S Extended", "aliases": [ "Overstayer M-A-S Extended" ] },
                     { "name": "Summit Audio Grand Channel", "aliases": [ "Summit Audio Grand Channel" ] },
                     { "name": "Tape", "aliases": [ "Tape" ] },
@@ -278,6 +334,7 @@
                     { "name": "Tube-Tech Equalizers mk II", "aliases": [ "Tube-Tech Equalizers mk II" ] },
                     { "name": "Tube-Tech ME 1B", "aliases": [ "Tube-Tech ME 1B" ] },
                     { "name": "Tube-Tech PE 1C", "aliases": [ "Tube-Tech PE 1C" ] },
+                    { "name": "VCA Compressor", "aliases": [ "VCA Compressor" ] },
                     { "name": "Weiss Compressor Limiter", "aliases": [ "Weiss Compressor Limiter" ] },
                     { "name": "Weiss Deess", "aliases": [ "Weiss Deess" ] },
                     { "name": "Weiss EQ MP", "aliases": [ "Weiss EQ MP" ] },
@@ -288,6 +345,7 @@
             {
                 "manufacturer": "Sonimus",
                 "names": [
+                    { "name": "N-Console", "aliases": [ "N-Console" ] },
                     { "name": "Satson Buss", "aliases": [ "SatsonBuss", "Satson Buss" ] },
                     { "name": "Satson Channel", "aliases": [ "SatsonChannel", "Satson Channel" ] }
                 ]
@@ -301,6 +359,7 @@
             {
                 "manufacturer": "Sound Particles",
                 "names": [
+                    { "name": "Air Music", "aliases": [ "AirMusic" ] },
                     { "name": "Brightness Panner", "aliases": [ "BrightnessPanner" ] },
                     { "name": "Energy Panner", "aliases": [ "EnergyPanner" ] }
                 ]
@@ -322,18 +381,34 @@
                 "names": [
                     { "name": "EchoBoy", "aliases": [ "EchoBoy" ] },
                     { "name": "EchoBoy Jr", "aliases": [ "EchoBoy Jr" ] },
-                    { "name": "PanMan", "aliases": [ "PanMan" ] }
+                    { "name": "PanMan", "aliases": [ "PanMan" ] },
+                    { "name": "Radiator", "aliases": [ "Radiator" ] }
+                ]
+            },
+            {
+                "manufacturer": "Stepwise (Andrew Reeman)",
+                "names": [
+                    { "name": "Frequency Shifter", "aliases": [ "Frequency Shifter" ] }
+                ]
+            },
+            {
+                "manufacturer": "Techivation",
+                "names": [
+                    { "name": "T-De-Esser", "aliases": [ "T-De-Esser" ] }
                 ]
             },
             {
                 "manufacturer": "Tokyo Dawn Labs",
                 "names": [
-                    { "name": "TDR Proximity", "aliases": [ "Proximity", "TDR Labs Proximity" ] }
+                    { "name": "TDR Nova GE", "aliases": [ "TDR Nova GE" ] },
+                    { "name": "TDR Proximity", "aliases": [ "Proximity", "TDR Labs Proximity" ] },
+                    { "name": "TDR Slick EQ GE", "aliases": [ "TDR VOS SlickEQ GE" ] }
                 ]
             },
             {
                 "manufacturer": "Tone Projects",
                 "names": [
+                    { "name": "Basslane Pro", "aliases": [ "Basslane Pro" ] },
                     { "name": "Kelvin", "aliases": [ "Kelvin" ] },
                     { "name": "Unisum", "aliases": [ "Unisum" ] }
                 ]
@@ -344,6 +419,12 @@
                     { "name": "ColourCopy", "aliases": [ "ColourCopy" ] },
                     { "name": "Presswerk", "aliases": [ "Presswerk" ] },
                     { "name": "Satin", "aliases": [ "Satin" ] }
+                ]
+            },
+            {
+                "manufacturer": "UVI",
+                "names": [
+                    { "name": "Shade", "aliases": [ "Shade" ] }
                 ]
             },
             {
@@ -359,6 +440,24 @@
                 "manufacturer": "Voxengo",
                 "names": [
                     { "name": "Teote", "aliases": [ "TEOTE", "Voxengo TEOTE" ] }
+                ]
+            },
+            {
+                "manufacturer": "Wavegrove",
+                "names": [
+                    { "name": "Haave", "aliases": [ "Haave" ] }
+                ]
+            },
+            {
+                "manufacturer": "Wavesfactory",
+                "names": [
+                    { "name": "Spectre", "aliases": [ "Spectre" ] }
+                ]
+            },
+            {
+                "manufacturer": "XLN Audio",
+                "names": [
+                    { "name": "RC-20 Retro Color", "aliases": [ "RC-20 Retro Color" ] }
                 ]
             },
             {
