--- a/ListVst/ListVst.csproj
+++ b/ListVst/ListVst.csproj
@@ -32,8 +32,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cocona" Version="2.2.0" />
+    <PackageReference Include="ConsoleAppFramework" Version="5.2.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
 </Project>
