Added missing plugins.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -76,6 +76,7 @@
                     { "name": "Saturn 2" },
                     { "name": "Timeless 2", "aliases": [ "FabFilter FF Timeless 2" ] },
                     { "name": "Timeless 3" },
+                    { "name": "Twin 3" },
                     { "name": "Volcano 3", "aliases": [ "FabFilter Volcano 3" ] }
                 ]
             },
@@ -92,8 +93,15 @@
                 "names": [
                     { "name": "RS-W2395C" },
                     { "name": "VCL-4" },
+                    { "name": "VQA-154" },
                     { "name": "VQP-258A" },
                     { "name": "VQP-259A" }
+                ]
+            },
+            {
+                "manufacturer": "Glitchmachines",
+                "names": [
+                    { "name": "Fracture XT", "aliases": [ "FractureXT" ] }
                 ]
             },
             {
@@ -145,6 +153,7 @@
                     { "name": "Ozone 10 Spectral Shaper" },
                     { "name": "Ozone Imager" },
                     { "name": "Ozone Imager 2" },
+                    { "name": "RX 10 Spectral De-noise" },
                     { "name": "Tonal Balance Control" },
                     { "name": "Tonal Balance Control 2" }
                 ]
@@ -208,6 +217,13 @@
                 ]
             },
             {
+                "manufacturer": "Mastering The Mix",
+                "names": [
+                    { "name": "Reso", "aliases": [ "RESO" ] },
+                    { "name": "Fuser", "aliases": [ "FUSER" ] }
+                ]
+            },
+            {
                 "manufacturer": "Mathew Lane",
                 "names": [
                     { "name": "DrMS" }
@@ -246,7 +262,9 @@
                 "names": [
                     { "name": "Elevate", "aliases": [ "Newfangled Audio Newfangled Elevate" ] },
                     { "name": "EQuivocate", "aliases": [ "Newfangled Audio Newfangled EQuivocate", "Newfangled EQuivocate" ] },
-                    { "name": "Invigorate" }
+                    { "name": "Generate" },
+                    { "name": "Invigorate" },
+                    { "name": "Recirculate" }
                 ]
             },
             {
@@ -295,7 +313,8 @@
                     { "name": "Unfiltered Audio Byome" },
                     { "name": "Unfiltered Audio lo-fi-af" },
                     { "name": "Unfiltered Audio Silo" },
-                    { "name": "Unfiltered Audio Spec Ops", "aliases": [ "Unfiltered Audio SpecOps" ] }
+                    { "name": "Unfiltered Audio Spec Ops", "aliases": [ "Unfiltered Audio SpecOps" ] },
+                    { "name": "Unfiltered Audio Triad" }
                 ]
             },
             {
@@ -320,6 +339,7 @@
             {
                 "manufacturer": "Pulsar",
                 "names": [
+                    { "name": "8200", "aliases": [ "Pulsar 8200" ] },
                     { "name": "Mu" },
                     { "name": "Massive" }
                 ]
@@ -328,11 +348,12 @@
                 "manufacturer": "Softube",
                 "names": [
                     { "name": "British Class A" },
+                    { "name": "Clipper" },
                     { "name": "Drawmer 1973" },
                     { "name": "FET Compressor Mk II" },
                     { "name": "Harmonics Analog Saturation Processor" },
                     { "name": "Modular FX" },
-                    { "name": "Opto Compressor" },
+                    { "name": "Opto Compressor", "aliases": [ "OPTO Compressor" ] },
                     { "name": "Overstayer M-A-S Extended" },
                     { "name": "Summit Audio Grand Channel" },
                     { "name": "Tape" },
@@ -348,7 +369,8 @@
                     { "name": "Weiss Deess" },
                     { "name": "Weiss EQ MP" },
                     { "name": "Weiss EQ1" },
-                    { "name": "Weiss MM-1 Mastering Maximizer" }
+                    { "name": "Weiss MM-1 Mastering Maximizer" },
+                    { "name": "Widener" }
                 ]
             },
             {
@@ -388,8 +410,10 @@
             {
                 "manufacturer": "Soundtoys",
                 "names": [
+                    { "name": "Crystallizer" },
                     { "name": "EchoBoy" },
                     { "name": "EchoBoy Jr" },
+                    { "name": "Little Plate" },
                     { "name": "PanMan" },
                     { "name": "Radiator" }
                 ]
@@ -403,12 +427,15 @@
             {
                 "manufacturer": "Techivation",
                 "names": [
+                    { "name": "M-Clarity" },
+                    { "name": "M-Compressor" },
                     { "name": "T-De-Esser" }
                 ]
             },
             {
                 "manufacturer": "Tokyo Dawn Labs",
                 "names": [
+                    { "name": "TDR Molot GE" },
                     { "name": "TDR Nova GE" },
                     { "name": "TDR Proximity", "aliases": [ "Proximity", "TDR Labs Proximity" ] },
                     { "name": "TDR Slick EQ GE", "aliases": [ "TDR VOS SlickEQ GE" ] }
@@ -428,7 +455,9 @@
                 "names": [
                     { "name": "ColourCopy" },
                     { "name": "Presswerk" },
-                    { "name": "Satin" }
+                    { "name": "Repro-5" },
+                    { "name": "Satin" },
+                    { "name": "Zebra 2", "aliases": [ "Zebra2" ] }
                 ]
             },
             {
@@ -449,6 +478,7 @@
             {
                 "manufacturer": "UVI",
                 "names": [
+                    { "name": "Falcon" },
                     { "name": "Shade" }
                 ]
             },
