Added remaning missing plugins.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -20,6 +20,12 @@
                 ]
             },
             {
+                "manufacturer": "Acon Digital",
+                "names": [
+                    { "name": "DeVerberate 3", "aliases": [ "Acon Digital DeVerberate 3" ] }
+                ]
+            },
+            {
                 "manufacturer": "Airwindows",
                 "names": [
                     { "name": "Capacitor" }
@@ -29,10 +35,12 @@
                 "manufacturer": "Arturia",
                 "names": [
                     { "name": "ARP 2600 V3" },
+                    { "name": "Chorus Dimension-D", "aliases": [ "Chorus DIMENSION-D" ] },
                     { "name": "Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
                     { "name": "Dist Tube-Culture", "aliases": [ "Dist TUBE-CULTURE" ] },
                     { "name": "Efx Fragments", "aliases": [ "Efx FRAGMENTS" ] },
-                    { "name": "Pigments" }
+                    { "name": "Pigments" },
+                    { "name": "Stage-73 V2" }
                 ]
             },
             {
@@ -42,9 +50,21 @@
                 ]
             },
             {
+                "manufacturer": "Cableguys",
+                "names": [
+                    { "name": "Shaperbox 3", "aliases": [ "ShaperBox 3" ] }
+                ]
+            },
+            {
                 "manufacturer": "d16",
                 "names": [
                     { "name": "Decimort 2" }
+                ]
+            },
+            {
+                "manufacturer": "Dear Reality",
+                "names": [
+                    { "name": "dearVR Pro 2", "aliases": [ "dearVR PRO 2" ] }
                 ]
             },
             {
@@ -173,6 +193,12 @@
                 ]
             },
             {
+                "manufacturer": "Kentaro",
+                "names": [
+                    { "name": "Stranular 1.2", "aliases": [ "Stranular_1.2" ] }
+                ]
+            },
+            {
                 "manufacturer": "Kush Audio",
                 "names": [
                     { "name": "Blyss" },
@@ -240,6 +266,12 @@
                 "manufacturer": "Michael Norris",
                 "names": [
                     { "name": "Spectral Drone Maker", "aliases": [ "Spectral DroneMaker" ] }
+                ]
+            },
+            {
+                "manufacturer": "Moog Music",
+                "names": [
+                    { "name": "MF-108S Cluster Flux", "aliases": [ "MF-108S ClusterFlux" ] }
                 ]
             },
             {
@@ -345,6 +377,18 @@
                 ]
             },
             {
+                "manufacturer": "Reverb Foundry",
+                "names": [
+                    { "name": "HD Cart" }
+                ]
+            },
+            {
+                "manufacturer": "Robbert van der Helm",
+                "names": [
+                    { "name": "Spectral Compressor" }
+                ]
+            },
+            {
                 "manufacturer": "Softube",
                 "names": [
                     { "name": "British Class A" },
@@ -371,6 +415,13 @@
                     { "name": "Weiss EQ1" },
                     { "name": "Weiss MM-1 Mastering Maximizer" },
                     { "name": "Widener" }
+                ]
+            },
+            {
+                "manufacturer": "Sonible",
+                "names": [
+                    { "name": "smartComp2" },
+                    { "name": "smartEQ4" }
                 ]
             },
             {
