Code clean up, recommended changes and added unrecognized words to dictionary.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -37,6 +37,7 @@
                     { "name": "ARP 2600 V3" },
                     { "name": "Chorus Dimension-D", "aliases": [ "Chorus DIMENSION-D" ] },
                     { "name": "Comp Tube-STA", "aliases": [ "Comp TUBE-STA" ] },
+                    { "name": "Delay Tape-201", "aliases": [ "Delay TAPE-201" ] },
                     { "name": "Dist Tube-Culture", "aliases": [ "Dist TUBE-CULTURE" ] },
                     { "name": "Efx Fragments", "aliases": [ "Efx FRAGMENTS" ] },
                     { "name": "Pigments" },
@@ -56,7 +57,7 @@
                 ]
             },
             {
-                "manufacturer": "d16",
+                "manufacturer": "D16 Group Audio Software",
                 "names": [
                     { "name": "Decimort 2" }
                 ]
@@ -232,8 +233,7 @@
                     { "name": "Lustrous Plates" },
                     { "name": "Reverberate" },
                     { "name": "Seventh Heaven" },
-                    { "name": "Seventh Heaven Professional" },
-                    { "name": "Tai Chi" }
+                    { "name": "Seventh Heaven Professional" }
                 ]
             },
             {
@@ -379,7 +379,8 @@
             {
                 "manufacturer": "Reverb Foundry",
                 "names": [
-                    { "name": "HD Cart" }
+                    { "name": "HD Cart" },
+                    { "name": "Tai Chi" }
                 ]
             },
             {
