Updated plugin reference list. Updated packages to the latest.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -59,7 +59,8 @@
             {
                 "manufacturer": "D16 Group Audio Software",
                 "names": [
-                    { "name": "Decimort 2" }
+                    { "name": "Decimort 2" },
+                    { "name": "Lush 2" }
                 ]
             },
             {
@@ -79,6 +80,12 @@
                 "names": [
                     { "name": "Blackhole" },
                     { "name": "Shimmer Verb", "aliases": [ "ShimmerVerb" ] }
+                ]
+            },
+            {
+                "manufacturer": "Exponential Audio",
+                "names": [
+                    { "name": "Symphony 3D", "aliases": [ "Symphony3D" ] }
                 ]
             },
             {
@@ -129,6 +136,7 @@
                 "manufacturer": "Ina-GRM",
                 "names": [
                     { "name": "GRM Comb Stereo" },
+                    { "name": "GRM Equalize" },
                     { "name": "GRM Evolution" },
                     { "name": "GRM Freq Shift Stereo", "aliases": [ "GRM FreqShift Stereo" ] },
                     { "name": "GRM Pitch Accum", "aliases": [ "GRM PitchAccum" ] },
@@ -140,12 +148,19 @@
             {
                 "manufacturer": "IK Multimedia",
                 "names": [
+                    { "name": "EQ-81" },
                     { "name": "Lurssen Mastering Console" },
-                    { "name": "TR5 EQ-81" },
-                    { "name": "TR5 Opto Comp" },
-                    { "name": "TR5 Tape Machine 440" },
-                    { "name": "TR5 Tape Machine 80" },
-                    { "name": "TR5 VC-670" }
+                    { "name": "Metering" },
+                    { "name": "Opto Comp" },
+                    { "name": "Tape Machine 80" },
+                    { "name": "Tape Machine 440" },
+                    { "name": "VC-670" }
+                ]
+            },
+            {
+                "manufacturer": "IRCAM Tools",
+                "names": [
+                    { "name": "Verb", "aliases": [ "IRCAM Tools - Verb" ] }
                 ]
             },
             {
@@ -393,10 +408,13 @@
                 "manufacturer": "Softube",
                 "names": [
                     { "name": "British Class A" },
+                    { "name": "Bus Processor" },
                     { "name": "Clipper" },
                     { "name": "Drawmer 1973" },
                     { "name": "FET Compressor Mk II" },
                     { "name": "Harmonics Analog Saturation Processor" },
+                    { "name": "Model 77 Dual Layer Synth" },
+                    { "name": "Modular" },
                     { "name": "Modular FX" },
                     { "name": "Opto Compressor", "aliases": [ "OPTO Compressor" ] },
                     { "name": "Overstayer M-A-S Extended" },
@@ -465,9 +483,12 @@
                     { "name": "Crystallizer" },
                     { "name": "EchoBoy" },
                     { "name": "EchoBoy Jr" },
+                    { "name": "FilterFreak 2", "aliases": [ "FilterFreak2" ] },
                     { "name": "Little Plate" },
                     { "name": "PanMan" },
-                    { "name": "Radiator" }
+                    { "name": "PhaseMistress" },
+                    { "name": "Radiator" },
+                    { "name": "Super Plate", "aliases": [ "SuperPlate" ] }
                 ]
             },
             {
@@ -509,7 +530,8 @@
                     { "name": "Presswerk" },
                     { "name": "Repro-5" },
                     { "name": "Satin" },
-                    { "name": "Zebra 2", "aliases": [ "Zebra2" ] }
+                    { "name": "Zebra 2", "aliases": [ "Zebra2" ] },
+                    { "name": "Zebrify" }
                 ]
             },
             {
