Added latest plugin mappings. Fixed sorting issue on project items in plugin list.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -99,6 +99,7 @@
                     { "name": "Pro-MB", "aliases": [ "FabFilter FF Pro-MB" ] },
                     { "name": "Pro-Q 2", "aliases": [ "FabFilter FF Pro-Q 2" ] },
                     { "name": "Pro-Q 3", "aliases": [ "FabFilter FF Pro-Q 3" ] },
+                    { "name": "Pro-Q 4" },
                     { "name": "Pro-R" },
                     { "name": "Saturn", "aliases": [ "FabFilter FF Saturn" ] },
                     { "name": "Saturn 2" },
@@ -129,6 +130,7 @@
             {
                 "manufacturer": "Glitchmachines",
                 "names": [
+                    { "name": "Cryogen" },
                     { "name": "Fracture XT", "aliases": [ "FractureXT" ] }
                 ]
             },
