Added format filtering.

--- a/OutputFormatting.HtmlFile/OutputFormatting.HtmlFile.csproj
+++ b/OutputFormatting.HtmlFile/OutputFormatting.HtmlFile.csproj
@@ -31,6 +31,13 @@
       <Content Include="styles.css">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <Content Update="selections.js">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <None Remove="selections.js" />
+      <Content Include="selections.js">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
