Added Relab Sonsig Rev-A to the list of recognized plugins.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -114,6 +114,7 @@
                 "names": [
                     { "name": "IRCAM Trax v3", "aliases": [ "FLUX SE - IRCAM TraxV3", "Flux TraxV3-x64" ] },
                     { "name": "IRCAM Verb v3", "aliases": [ "Flux VerbV3-x64" ] },
+                    { "name": "IRCAM Verb", "aliases": [ "IRCAM Tools - Verb" ] },
                     { "name": "Stereo Tool", "aliases": [ "StereoTool", "StereoToolV3", "FLUX SE StereoToolV3", "StereoToolV3-x64", "Flux StereoToolV3-x64" ] }
                 ]
             },
@@ -157,12 +158,6 @@
                     { "name": "Tape Machine 80" },
                     { "name": "Tape Machine 440" },
                     { "name": "VC-670" }
-                ]
-            },
-            {
-                "manufacturer": "IRCAM Tools",
-                "names": [
-                    { "name": "Verb", "aliases": [ "IRCAM Tools - Verb" ] }
                 ]
             },
             {
@@ -391,6 +386,12 @@
                     { "name": "8200", "aliases": [ "Pulsar 8200" ] },
                     { "name": "Mu" },
                     { "name": "Massive" }
+                ]
+            },
+            {
+                "manufacturer": "Relab",
+                "names": [
+                    { "name": "Sonsig Rev-A", "aliases": [ "Sonsig Rev-A" ] }
                 ]
             },
             {
