Fixed plugin details for certain GRM and IRCAM tools.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -114,7 +114,7 @@
                 "names": [
                     { "name": "IRCAM Trax v3", "aliases": [ "FLUX SE - IRCAM TraxV3", "Flux TraxV3-x64" ] },
                     { "name": "IRCAM Verb v3", "aliases": [ "Flux VerbV3-x64" ] },
-                    { "name": "IRCAM Verb", "aliases": [ "IRCAM Tools - Verb" ] },
+                    { "name": "IRCAM Verb", "aliases": [ "IRCAM Tools - Verb", "FLUX SE - IRCAM Verb" ] },
                     { "name": "Stereo Tool", "aliases": [ "StereoTool", "StereoToolV3", "FLUX SE StereoToolV3", "StereoToolV3-x64", "Flux StereoToolV3-x64" ] }
                 ]
             },
@@ -138,12 +138,12 @@
             {
                 "manufacturer": "Ina-GRM",
                 "names": [
-                    { "name": "GRM Comb Stereo" },
+                    { "name": "GRM Comb Filter", "aliases": [ "GRM CombFilter" ] },
                     { "name": "GRM Equalize" },
                     { "name": "GRM Evolution" },
-                    { "name": "GRM Freq Shift Stereo", "aliases": [ "GRM FreqShift Stereo" ] },
                     { "name": "GRM Pitch Accum", "aliases": [ "GRM PitchAccum" ] },
                     { "name": "GRM Reson" },
+                    { "name": "GRM Shift", "aliases": [ "GRM FreqShift Stereo" ] },
                     { "name": "GRM Space Grain", "aliases": [ "GRM SpaceGrain" ] },
                     { "name": "GRM Warp" }
                 ]
