Updated settings file with new versions of plugins.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -184,6 +184,8 @@
                     { "name": "Ozone 10 Equalizer" },
                     { "name": "Ozone 10 Exciter" },
                     { "name": "Ozone 10 Spectral Shaper" },
+                    { "name": "Ozone 10 Vintage EQ" },
+                    { "name": "Ozone 10 Vintage Tape" },
                     { "name": "Ozone Imager" },
                     { "name": "Ozone Imager 2" },
                     { "name": "RX 10 Spectral De-noise" },
@@ -351,6 +353,7 @@
                     { "name": "Lindell TE-100" },
                     { "name": "Millennia NSEQ-2" },
                     { "name": "Millennia TCL-2" },
+                    { "name": "SPL De-Verb Plus" },
                     { "name": "SPL Iron", "aliases": [ "SPL IRON", "Plugin Alliance SPL IRON" ] },
                     { "name": "SPL Passeq" },
                     { "name": "Unfiltered Audio Bass Mint" },
